# contrastive-ne

./: .gitignore  LICENSE  pyproject.toml  readme.md
cne/: __init__.py  _cne.py  callbacks.py  cne.py  simple.py
src/cne/: __init__.py  _cne.py  callbacks.py  cne.py
tests/: example.py  readme_experiments.ipynb  test.py
