[project]
name = "cne"
version = "0.1.3"
description = "Contrastive Neighbor Embedding for low-dimensional distance-less embeddings"
authors = [
    {name = "Niklas Böhm", email = "jan-niklas.boehm@uni-tuebingen.de"},
]
dependencies = [
    "torch~=1.10",
    "numpy>=1.17,<2",
    "scikit-learn>=0.23.2",
    "annoy"
]
requires-python = ">=3.8,<3.10"
license = {text = "EUPL"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
